@@ -389,7 +389,7 @@ AM_CONDITIONAL(STATIC_AVUTIL,[test x$static_avutil = xyes])
 
 AC_HEADER_STDC
 AC_CHECK_HEADERS([fcntl.h limits.h stdlib.h string.h sys/ioctl.h sys/time.h unistd.h stdint.h])
-AC_CHECK_HEADERS([ctype.h stat.h errno.h])
+AC_CHECK_HEADERS([ctype.h stat.h errno.h netinet/in.h])
 if ( `test x${ac_cv_header_ctype_h} = xno` ) ; then
 	echo "FATAL ERROR: header file ctype.h not found and required!"
 	exit 1
